--- a/식권최종처리MultiThread.ipynb
+++ b/식권최종처리MultiThread.ipynb
@@ -29,7 +29,7 @@
     "# 식당: NWTAVR-MA-202112-식당이름\n",
     "# 직원: NWTAVR-MS-202112-4077-01\n",
     "\n",
-    "QR_HEADER = \"NWTAVR\"\t\t\t\t# 노원구청 교통행정과 등록팀 (내 QR인지 식별자 역할)\n",
+    "QR_HEADER = \"NWTAVR\"\t\t\t\t# 노원구청 교통행정과 등록팀 (내 QR인지 식별자 역할): 교통행정팀=TA(과장님 포함), 운수지도팀=TG, 자동차관리팀=VM\n",
     "QR_CLASS_MA = \"MA\"\t\t\t\t\t# 가맹점 = Member of Affiliation\n",
     "QR_CLASS_MS = \"MS\"\t\t\t\t\t# 직원 = Member of Staff\n",
     "QR_YEAR = \"2023\"\t\t\t\t\t# 대상년도 =========> 실행시 반드시 고칠 것\n",
@@ -38,9 +38,21 @@
     "QR_SN = list(map(lambda x: \"0\" + str(x) if x < 10 else str(x), range(1, 21)))    # [\"01\", \"02\", ... \"19\", \"20\"]\n",
     "\n",
     "affil_list = [\"노코(NOKO)\", \"어장촌생선구이\", \"횡성목장\", \"전주콩나루\", \"옛날칼국수\", \"칠리사이공\", \"도나한우\", \"북경(北京)\", \"명문식당\", \"일성스시\", \"새싹비빔밥\", \"파운드커피\", \"구내식당\"]\n",
+    "affil_list_total = affil_list + ['어돈', '신의주찹쌀순대', '마시차이나', '순두부와빈대떡', '노원437', '명품장어구이']\t# 교통행정과 전체 식당 리스트 추가\n",
     "\n",
     "code_list =  [\"4080\",    \"4076\",    \"4079\",    \"4069\",    \"4078\",    \"4071\",    \"4068\",    \"4075\",    \"4077\"   ]\n",
-    "name_list =  [\"정미경\",  \"정성욱\",  \"강선임\",  \"모수지\",  \"송현우\",  \"신이은\",  \"이지은\",  \"김형수\",  \"김재형\" ]\t# 직원명단 =========> 인사변동시 반드시 고칠 것\n",
+    "name_list =  [\"정미경\",  \"정성욱\",  \"강선임\",  \"모수지\",  \"송현우\",  \"신이은\",  \"이지은\",  \"김형수\",  \"김재형\" ]\t# 직원명단(9) =========> 인사변동시 반드시 고칠 것\n",
+    "\n",
+    "TA_code_list = [\"4060\",   \"4040\",   \"4038\",   \"4036\",   \"4034\",   \"4062\",   \"4039\",   \"4048\",   \"4037\",   \"4041\",   \"4035\"  ]\n",
+    "TA_name_list = [\"조병주\", \"정태영\", \"김주영\", \"최소영\", \"김태범\", \"하정희\", \"김윤정\", \"방상호\", \"손효석\", \"최민규\", \"이수지\"]\t# 직원명단(11, 과장님 포함)\n",
+    "\n",
+    "TG_code_list = [\"4047\",   \"4043\",   \"4045\",   \"4056\",   \"4055\", \"4044\"]\n",
+    "TG_name_list = [\"윤정웅\", \"백주호\", \"김미섭\", \"김필상\", \"김영훈\", \"심승근\"]\t\t# 직원명단(6)\n",
+    "\n",
+    "VM_code_list = [\"4052\",   \"4051\",   \"4054\",   \"4053\",   \"4050\",   \"4049\"]\n",
+    "VM_name_list = [\"성금택\", \"홍종수\", \"우상민\", \"홍경옥\", \"신완택\", \"배홍길\"]\t\t# 직원명단(6)\n",
+    "\n",
+    "\n",
     "color_list = [\"#E32636\", \"#FFA500\", \"#FF5511\", \"#0FF1C3\", \"#AB3ED8\", \"#AAEE00\", \"#1155FF\", \"#FCE205\", \"#119617\"]\n",
     "\n",
     "name_by_code = {code_list[i]:name_list[i] for i in range(len(code_list))}\t\t# {'4080':'전현호','4076':'정성욱',...,'4077':'김재형'}\n",
