--- a/식권최종처리MultiThread.ipynb
+++ b/식권최종처리MultiThread.ipynb
@@ -133,14 +133,10 @@
     "\t\tself.detected_MS_set = set()    # 식권QR (중복없음)\n",
     "\t\tself.final_MA_name = \"\"\t\t\t# 최종 식당 이름\n",
     "\t\tself.final_MS_dict = {}\t\t\t# 최종 직원 명단 : {\"전현호\": [1, 4, 5], \"정성욱\": [2, 10], \"박선녕\": [],  \"신상용\": [],  ..., \"김재형\": [4, 12]}\n",
-    "\t\t\n",
-    "\t\t# DIVX 코덱으로 avi 파일 생성\n",
-    "\t\t# self.fourcc = cv2.VideoWriter_fourcc(*'DIVX')\n",
-    "\t\t# self.out = cv2.VideoWriter(f\"{OUT_PATH}QR_result_{threadID}.avi\", self.fourcc, self.fps, (self.width, self.height))\n",
     "        \n",
     "        # DIVX 코덱으로 avi 파일 생성\n",
-    "\t\tself.fourcc = cv2.VideoWriter_fourcc(*'MP4V')\n",
-    "\t\tself.out = cv2.VideoWriter(f\"{OUT_PATH}QR_result_{threadID}.mp4\", self.fourcc, self.fps, (self.width, self.height))\n",
+    "\t\tself.fourcc = cv2.VideoWriter_fourcc(*'DIVX')\n",
+    "\t\tself.out = cv2.VideoWriter(f\"{OUT_PATH}QR_result_{threadID}.avi\", self.fourcc, self.fps, (self.width, self.height))\n",
     "\t\n",
     "\t# 쓰레드 실행\n",
     "\tdef run(self):\n",
@@ -152,7 +148,7 @@
     "\t\t\tif success == False:\n",
     "\t\t\t\tbreak\n",
     "\n",
-    "\t\t\t# frame 1개에서 QR 찾기\n",
+    "\t\t\t# frame 1개에서 여러개의 QR 찾기\n",
     "\t\t\tQRs_in_frame = decode(frame, symbols=[ZBarSymbol.QRCODE])    # list\n",
     "\t\t\tnum_of_QR = len(QRs_in_frame)\n",
     "\t\t\t# print(f\"[전처리 전] 발견된 QR개수: {num_of_QR}\")\n",
